# podstawy-ai-2025

./: .gitignore  CMakeLists.txt  README.md
project1/: CMakeLists.txt
project1/src/components/steering_behaviours/: steering_behaviours.cpp
project1/src/game/: game.cpp  game.h
project1/src/game_objects/: game_object.cpp  game_object.h
project1/src/game_objects/enemy/: enemy.h
project1/src/game_objects/obstacle/: obstacle.cpp
project1/src/game_objects/player/: raycast.h
project1/src/helpers/: helper_methods.h  parameters.h
project2/: CMakeLists.txt
project2/src/: main.cpp
project2/src/bots/: bot.cpp  bot.h
project2/src/components/fsm/: fsm.cpp  fsm.h
project2/src/game/: game.cpp  game.h
project2/src/helpers/: parameters.h
project2/src/map/: map.cpp  map.h  navigation_graph.cpp  navigation_graph.h  obstacle.cpp  obstacle.h
project2/src/weapons/: weapon.h
project2/src/weapons/rail_gun/: rail_gun.cpp  rail_gun.h
project2/src/weapons/rocket_launcher/: rocket_launcher.cpp  rocket_launcher.h
src/components/collision/: collider.cpp  collider.h
src/components/steering_behaviours/: steering_behaviours.cpp  steering_behaviours.h
src/game/: game.cpp  game.h
src/game_objects/enemy/: enemy.cpp  enemy.h
src/game_objects/obstacle/: obstacle.h
src/game_objects/player/: player.cpp  player.h  raycast.cpp
src/helpers/: parameters.h
